[gd_scene load_steps=12 format=3 uid="uid://bmjjc5rg4u26d"]

[ext_resource type="Texture2D" uid="uid://bbgoq317gdd1o" path="res://Assets/Images/ObstacleRace/Ilea nadando/Ilea nadando 1.png" id="1"]
[ext_resource type="Script" uid="uid://cykigmnxabsnh" path="res://Scenes/Entity/Illea/Nadando/IleaNadando.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://daex6by887v8u" path="res://Assets/Sounds/SFX/swimming.mp3" id="3"]
[ext_resource type="Texture2D" uid="uid://dgfxwof3xi8ud" path="res://Assets/Images/ObstacleRace/Ilea nadando/Ilea nadando 3.png" id="4"]
[ext_resource type="Texture2D" uid="uid://yth2b8j3gkw0" path="res://Assets/Images/ObstacleRace/Ilea nadando/Ilea nadando 2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://wqeve3e7crdu" path="res://Assets/Images/ObstacleRace/Ilea nadando/Ilea nadando 4.png" id="6"]

[sub_resource type="CapsuleShape2D" id="1"]
height = 82.0

[sub_resource type="Animation" id="2"]
resource_name = "Punch"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.6, 0.606667, 1), Color(1, 1, 1, 0.235294), Color(1, 0.6, 0.6, 1), Color(1, 1, 1, 0.235294), Color(1, 0.6, 0.6, 1), Color(1, 1, 1, 0.235294), Color(1, 0.6, 0.6, 1), Color(1, 1, 1, 0.235294), Color(1, 0.6, 0.6, 1)]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("1")]
}

[sub_resource type="Animation" id="4"]
resource_name = "Swim"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1"), ExtResource("5"), ExtResource("4"), ExtResource("6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t5ue"]
_data = {
&"Punch": SubResource("2"),
&"RESET": SubResource("3"),
&"Swim": SubResource("4")
}

[node name="IleaNadando" type="CharacterBody2D" groups=["player"]]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="BGSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = 0.5
autoplay = true
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8t5ue")
}

[node name="InvisibiltyTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="finished" from="BGSound" to="." method="_on_BGSound_finished"]
[connection signal="timeout" from="InvisibiltyTimer" to="." method="_on_InvisibiltyTimer_timeout"]
